--- a/Easer's Resume_CC.html
+++ b/Easer's Resume_CC.html
@@ -28,7 +28,8 @@
 				</select>
 				<span class="ver-line">|</span>
 				<select id="select01">  
-					<option selected="selected">中国，北京</option> 
+					<option selected="selected">中国，上海</option> 
+					<option>中国，北京</option> 
 					<option>中国，长春</option>  
 				</select>
 			</p>
@@ -62,7 +63,7 @@
 				<dt><h5>工作经历</h5></dt>
 				<dd>
 					<div class="work-experience">
-						<p>2019/09 -- 至今</p>
+						<p>2019/09 -- 2020//09</p>
 						<h6>清流鼎点科技有限公司<span class="ver-line">|</span> APP开发</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
 							1.开发足球印记 web app （基于 React Native 和 React web）。
