--- a/Easer's Resume_CE.html
+++ b/Easer's Resume_CE.html
@@ -22,7 +22,8 @@
 				Born in 1989/12<span class="ver-line">|</span>HUKOU：JILIN-SIPING, CHINA
 				<br>Location：
 					<select id="select01">
-						<option selected="selected">BeiJing, China</option>
+						<option selected="selected">Shanghai, China</option>
+						<option>BeiJing, China</option>
 						<option>ChangChun, China</option>
 					</select>
 				<br>7 Years' Experience
