--- a/Easer's Resume_CC.html
+++ b/Easer's Resume_CC.html
@@ -8,41 +8,42 @@
 		<link rel="stylesheet" type="text/css" href="./htmlSource/resume_preview.css" media="all">
 	</head>
 	<body>
-		
+
 		<div class="resumeBody">
 			<!-- <div style="height:32px;padding-left:20px;color:#fd7222;font-size:14px;"></div> -->
 			<div class="summary">
 			<img width="100" height="130" align="right" class="headerImg" alt="刘玉泽" src="./htmlSource/EaserIcon01.jpg">
 			<h1>
-				<select id="select" onchange="window.location=this.value;" style="font-size:32px;">  
-				<option value="./index.html" selected="selected">刘玉泽</option>  
-				<option value="./Easer's Resume_CE.html">Liu.Easer </option>  
+				<select id="select" onchange="window.location=this.value;" style="font-size:32px;">
+				<option value="./index.html" selected="selected">刘玉泽</option>
+				<option value="./Easer's Resume_CE.html">Liu.Easer </option>
 				</select>
 				</h1>
 			男<span class="ver-line">|</span>未婚<span class="ver-line">|</span>1989年12月生<br>
-			吉林大学<span class="ver-line">|</span>统招本科<span class="ver-line">|</span>7+年工作经验<span class="ver-line">|</span>海外1年经验<br>
+			吉林大学<span class="ver-line">|</span>统招本科<span class="ver-line">|</span>9+年工作经验<span class="ver-line">|</span>海外1年经验<br>
 			<p>职业期望：
-				<select id="select01">  
-					<option selected="selected">IOS开发工程师</option> 
-					<option>开发技术岗位</option>  
+				<select id="select01">
+					<option selected="selected">IOS开发工程师</option>
+					<option>开发技术岗位</option>
 				</select>
 				<span class="ver-line">|</span>
-				<select id="select01">  
-					<option selected="selected">中国，上海</option> 
-					<option>中国，北京</option> 
-					<option>中国，长春</option>  
+				<select id="select01">
+					<option selected="selected">中国，上海</option>
+					<option>中国，北京</option>
+					<option>中国，长春</option>
 				</select>
 			</p>
 			<p>手机：
-				<select id="select01">  
+				<select id="select01">
 					<option selected="selected">+8617549611230</option>
-					<option>+8615044158006</option>  
+					<option>+8615044158006</option>
 				</select>
 			</p>
 			<p>E-mail：
-				<select id="select01">  
-					<option selected="selected">liu.easer@qq.com</option> 
-					<option>liu.easer@gmail.com</option>  
+				<select id="select01">
+					<option selected="selected">easer.liu@cognizant.com</option>
+					<option>liu.easer@qq.com</option>
+					<option>liu.easer@gmail.com</option>
 				</select>
 			</p>
 			<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
@@ -51,17 +52,34 @@
 			<dl class="details">
 				<dt><h5>职业技能</h5></dt>
 				<dd>
-					<div class="professional-skill">1.追求保证代码质量前提下提升工作效率，熟悉Git及GitFlow。</div>
-					<div class="professional-skill">2.熟悉Objective-C,基础知识扎实，了解多线程、内存、CoreData等，了解并正在深入学习Swift。</div>
-					<div class="professional-skill">3.熟悉iOS SDK（CoreFoundation, Core Graphics、Quartz 2D、Core Animation等）。</div>
-					<div class="professional-skill">4.善于并熟练使用Masonry、SDWebImage、MJExtension等主流第三方库。</div>
-					<div class="professional-skill">5.熟悉HTTP协议，使用Charles进行网络模拟。</div>
-					<div class="professional-skill">6.熟悉JSON/XML的格式与解析。</div>
-					<div class="professional-skill">7.了解 ReactNative。</div>
-					<div class="professional-skill">8.英语方面听说读写能力良好，曾于马来西亚进行为期一年的英语学习。</div>
+					<div class="professional-skill">1.追求保证代码质量前提下提升工作效率，熟悉 Git 及 GitFlow 。</div>
+					<div class="professional-skill">2.熟悉 OC、SwiftUI,基础知识扎实，了解多线程、内存等。</div>
+					<div class="professional-skill">3.熟悉 iOS SDK。</div>
+					<div class="professional-skill">4.善于并熟练使用 Masonry、SDWebImage、MJExtension、Moya 等主流第三方库。</div>
+					<div class="professional-skill">5.熟悉 HTTP 协议，使用Charles进行网络模拟。</div>
+					<div class="professional-skill">6.熟悉 JSON 的格式与解析。</div>
+					<div class="professional-skill">7.英语方面听说读写能力良好，曾于马来西亚进行为期一年的英语学习。</div>
 				</dd>
 				<dt><h5>工作经历</h5></dt>
 				<dd>
+					<div class="work-experience">
+						<p>2021/12 -- 2023/09</p>
+						<h6>高知特信息技术公司（Apple客户）<span class="ver-line">|</span> APP开发</h6>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							1.MyBiz、Expert等APP（SwiftUI）。
+						</p>
+						<p style="margin-left: 20pt;">
+							- MyBiz、Expert 是展示产品销售数据的 APP。<br>
+							- 基于 SwiftUI 进行开发，并完成视频播放、离线缓存、图表展示、模型转换、图控件、menu控件等<br>
+						</p>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							2.苹果技术应用调研。 <br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- TTS 技术应用调研。<br>
+							- 本地化python脚本、应用内切换 APP 语言。<br>
+						</p>
+					</div>
 					<div class="work-experience">
 						<p>2019/09 -- 2020//09</p>
 						<h6>清流鼎点科技有限公司<span class="ver-line">|</span> APP开发</h6>
@@ -79,12 +97,12 @@
 							- 直面是一款视频会议类应用。<br>
 							- 拆分 Mobile 端 RN 代码进行复用，完成 PC 端应用界面。<br>
 						</p>
-					</div> 
+					</div>
 					<div class="work-experience">
 						<p>2017/12 -- 2019/05</p>
 						<h6>北京聚易互动科技有限公司<span class="ver-line">|</span> IOS开发</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.上海申花官方APP、天津泰达官方APP。 <br>
+							1.上海申花官方 APP、天津泰达官方 APP。 <br>
 						</p>
 						<p style="margin-left: 20pt;">
 							- 俱乐部官方 APP 旨在为球迷及时提供相关俱乐部的比赛新闻和赛程安排，为球迷提供交流场所。<br>
@@ -113,7 +131,7 @@
 							- 使用Cocos Creator实现游戏逻辑<br>
 							- 实现微信排行榜功能<br>
 						</p>
-					</div> 
+					</div>
 					<div STYLE="page-break-after: always;" ></div>
 					<div class="work-experience">
 						<p>2016/11 -- 2017/10</p>
@@ -127,7 +145,7 @@
 							- 利用 CoreGraphics 实现折线图以及其他图标。<br>
 							- 实现各 View 之间的转场动画。<br>
 						</p>
-					</div> 
+					</div>
 					<div class="work-experience">
 						<p>2012/7 -- 2016/10</p>
 						<h6>长春径点科技有限公司<span class="ver-line">|</span>QA Leader、IOS开发</h6>
@@ -162,17 +180,14 @@
 				</dd>
 				<dt><h5>证书</h5></dt>
 				<dd>
-					<h6>大学英语四级<span class="ver-line">|</span>2010/06</h6>
-					<h6>全国计算机等级二级<span class="ver-line">|</span>2011/03</h6>
-					<h6>CESIEEB<span class="ver-line">|</span>2017/07</h6>
-					<h6>PMP<span class="ver-line">|</span>2019/03</h6>
+					<h6>大学英语四级 2010/06<span class="ver-line">|</span>全国计算机等级二级 2011/03<span class="ver-line">|</span>CESIEEB 2017/07</h6>
+					<h6>PMP 2019/03<span class="ver-line">|</span>SCM 2023/06</h6>
 				</dd>
 				<dt><h5>自我评价</h5></dt>
 				<dd>
 					<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-						1.主攻 IOS APP 开发，了解 React Native语言，正逐渐转向 Swift 语言。<br>
+						1.主攻 IOS APP 开发，熟练使用 OC、SwiftUI 语言。<br>
 						2.经常运用 Google 和 Stack overflow 查找开发过程中遇到问题的办法，或者查看官方文档经过实验解决。<br>
-						3.由于非科班出身，算法能力有所不足，所以会每周查看 Leetcode 上算法的原理，并实践。<br>
 					</p>
 				</dd>
 			</dl>
