--- a/Easer's Resume_CE.html
+++ b/Easer's Resume_CE.html
@@ -19,14 +19,14 @@
 				</select>
 				</h1>
 				Male<span class="ver-line">|</span>Single<span class="ver-line">|</span>
-				Born in 1989/12<span class="ver-line">|</span>HUKOU：JILIN-SIPING, CHINA
+				Born in 1989/12<span class="ver-line">
 				<br>Location：
 					<select id="select01">
 						<option selected="selected">Shanghai, China</option>
 						<option>BeiJing, China</option>
 						<option>ChangChun, China</option>
 					</select>
-				<br>7 Years' Experience
+				<br>9+ Years' Experience
 				<p>Mobile: 
 					<select id="select01">  
 						<option selected="selected">+8617549611230</option>
@@ -42,26 +42,63 @@
 				<p>GitHub：<a href="https://github.com/sinianshou">https://github.com/sinianshou</a></p>
 			</div>
 			<dl class="details">
-				<dt><h5>Career Objective</h5></dt>
+				<div style="display: none;">
+					<dt><h5>Career Objective</h5></dt>
+					<dd>
+						<ul>
+						<li><strong>Desired Position:</strong><br>IOS Development Engineer</li>
+						<li><strong>Desired Location:</strong><br>BeiJing. China</li>
+						</ul>
+					</dd>
+				</div>
+				<dt><h5>职业技能</h5></dt>
 				<dd>
-					<ul>
-					<li><strong>Desired Position:</strong><br>IOS Development Engineer</li>
-					<li><strong>Desired Location:</strong><br>BeiJing. China</li>
-					</ul>
-				</dd>
-				<dt><h5>Self-assessment</h5></dt>
-				<dd>
-					<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-						I can work steadfastly, scrupulously, attentively, have strong practical ability to analyze and deal with the problems, 
-						 strongly thirst for new knowledge, good at independent thinking, have good consciousness about teamwork. 
-						Now I am learnning English in Malaysia, hope to join the company and contribute.
-					</p>
+					<div class="professional-skill">1. Pursue improving work efficiency while ensuring code quality, and be familiar with Git and GitFlow.</div>
+					<div class="professional-skill">2. Familiar with OC and SwiftUI, with solid basic knowledge and understanding of multithreading, memory, etc.</div>
+					<div class="professional-skill">4. Proficient in using mainstream third-party libraries such as Masonry, SDWebImage, MJExtension, Moya, etc.</div>
+					<div class="professional-skill">5. Good English listening, speaking, reading, and writing abilities, and have studied English in Malaysia for one year.</div>
 				</dd>
 				<dt><h5>Work Experience</h5></dt>
 				<dd>
 					<div class="work-experience">
+						<p>2021/12 -- 2023/09</p>
+						<h6>Cognizant Technology Solutions (Shanghai) Co Ltd (Apple Client)<span class="ver-line">|</span> iOS Developer</h6>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							1.MyBiz、Expert APPs(SwiftUI)。
+						</p>
+						<p style="margin-left: 20pt;">
+							- MyBiz、Expert are APPs used to display product sales data.<br>
+							- Develop based on SwiftUI and complete video play, offline caching, chart display, json model conversion, custom image view, custom menu component, etc<br>
+						</p>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							2.Research on the usage of technology.<br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- TTS(VITS)S<br>
+							- Python script for localization of iOS APP、switch language in-app。<br>
+						</p>
+					</div>
+					<div class="work-experience">
+						<p>2019/09 -- 2020//09</p>
+						<h6>PowerInfo Technology Co Ltd<span class="ver-line">|</span> iOS Developer</h6>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							1.Football Imprint Web APP ( React Native and React web).
+						</p>
+						<p style="margin-left: 20pt;">
+							- Football Imprint is an APP that plays users' self captured football matches.<br>
+							- The web version of the APP is used for drainage, including UI and video playback.<br>
+						</p>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							2.Direct APP PC version ( Electron). <br>
+						</p>
+						<p style="margin-left: 20pt;">
+							- Direct is a video conferencing application.<br>
+							- Split the RN code of Direct APP mobile version for reuse, and complete the PC application interface.<br>
+						</p>
+					</div>
+					<div class="work-experience">
 						<p>2017/12 -- 2019/05</p>
-						<h6>Beijing Juyi Hudong TechnologyCo.,Ltd<span class="ver-line">|</span>IOS Developer</h6>
+						<h6>Beijing Juyi Hudong Technology Co Ltd<span class="ver-line">|</span>iOS Developer</h6>
 						<p>
 							<span>Computer Software</span>
 							<span><span class="ver-line">|</span>Private</span>
@@ -71,8 +108,8 @@
 							<strong>Job Description:</strong>
 							<br>1.Develop the official APPs for some football clubs, display news about football, provide BBS function.
 							<br>2.Develop a recruitment APP named XiCheng(personal version), includes IM and news functions.
-							<br>3.Develop IOS APP and Mini Program for WeChat named multi-purpose calculator.
-							<br>4.Develop IOS APP and Mini Game for WeChat named Eliminate Hexagon.
+							<br>3.Develop iOS APP and Mini Program for WeChat named multi-purpose calculator.
+							<br>4.Develop iOS APP and Mini Game for WeChat named Eliminate Hexagon.
 						</p>
 					</div>
 					<div class="work-experience">
@@ -81,7 +118,7 @@
 					</div>
 					<div class="work-experience">
 						<p>2015/09 -- 2016/10</p>
-						<h6>AvePoint<span class="ver-line">|</span>IOS Developer</h6>
+						<h6>AvePoint<span class="ver-line">|</span>iOS Developer</h6>
 						<p>
 							<span>Computer Software</span>
 							<span><span class="ver-line">|</span>WFOE</span>
@@ -108,92 +145,12 @@
 						</p>
 					</div>
 				</dd>
-				<dt><h5>Project Experience</h5></dt>
-				<dd>
-					<div class="project-experience">
-						<p>2018/9-2019/2</p>
-						<h6>Multi-purpose Calculator</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Project Description：</strong>
-								<br>Build a lightweight, versatile calculator.
-							</p>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Responsibilities：</strong>
-								<br>1. Scientific calculation, after-tax salary, clothing size, unit conversion and other functions.
-								<br>2. All kinds of calculation logic and ERROR logic of scientific calculation.
-								<br>3. The calculation logic of after-tax salary.
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2018/4-2018/9</p>
-						<h6>XiCheng Recruitment (personal version)</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Project Description：</strong>
-								<br>In conjunction with the enterprise version, the whole process of recruitment and application between enterprises and individuals can be realized.
-							</p>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Responsibilities：</strong>
-								<br>1. Edit resumes.
-								<br>2. Display enterprise information and news.
-								<br>3. Investment process.
-								<br>4. Instant communication with the person in charge of the enterprise side.
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2017/12-2018/4</p>
-						<h6>Shanghai Shenhua & Tianjin Taida Official APP</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Project Description：</strong>
-								<br>It provides a place for football club members and fans to communicate with each other, share the life details of members and fans, release team news as well as match schedule and match moments in the first time.
-							</p>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Responsibilities：</strong>
-								<br>1. Realization of mall module.
-								<br>2. IPhone X fit.
-								<br>3. Performance optimization.
-								<br>4. Fix bugs found during testing.
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2017/6-2017/9</p>
-						<h6>LOL Helper</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Project Description：</strong>
-								<br>Players can search detail game data about LOL(South America server), or use players' name as keyword to search their recent summary and detail game information, then realize different players' strengths and weaknesses, improve players' abilities of LOL.
-							</p>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Responsibilities：</strong>
-								<br>1.Get game data with API and save into SQLite file.
-								<br>2.Draw line charts with CoreGraphics.
-								<br>3.Transitioning animation.
-								<br>4.Fix BUGs.
-							</p>
-						</div>
-					</div>
-					<div class="project-experience">
-						<p>2015/9-2016/10</p>
-						<h6>CG</h6>
-						<div>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Project Description：</strong>
-								<br>It is a add-ons for PC client of CG, mainly use for displaying and operating the data scaned by CG, make customs feel more convenient to check or operate the report.
-							</p>
-							<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-								<strong>Responsibilities：</strong>
-								<br>Implement the function in the design document, develop App, solve the issues reported, make sure App can release in time.
-							</p>
-						</div>
-					</div>
-				</dd>
 				<dt><h5>Education Background</h5></dt>
 				<dd>
+					<div class="education-background">
+						<p>2016/10 -- 2017/10</p>
+						<h6>Pusat Bahasa Titian Jaya(Kuala Lumpur) Sdn Bhd<span class="ver-line">|</span>International Foundation English</h6>
+					</div>
 					<div class="education-background">
 						<p>2008/08 -- 2012/07</p>
 						<h6>
@@ -209,25 +166,18 @@
 					<h6>CET4<span class="ver-line">|</span>2010/06</h6>
 					<h6>Nationwide Computer Level Test Band 2<span class="ver-line">|</span>2011/03</h6>
 					<h6>CESIEEB<span class="ver-line">|</span>2017/07</h6>
+					<h6>PMP 2019/03<span class="ver-line">|</span>SCM 2023/06</h6>
 				</dd>
-				<dt><h5>Language Skills</h5></dt>
+				
+				<dt><h5>Self-assessment</h5></dt>
 				<dd>
-					<div class="language-skill">English<span>：reading&amp;writing average<span class="ver-line">|</span>listening&amp;speaking average</span></div>
-				</dd>
-					<dt><h5>Professional Skills</h5></dt>
-				<dd>
-					<div class="professional-skill">OC Language<span class="ver-line">|</span>proficient<span class="ver-line">|</span>12 months</div>
-					<div class="professional-skill">Office WOrd、Excel、PPT<span class="ver-line">|</span>proficient<span class="ver-line">|</span>24 months</div>
-					<div class="professional-skill">PhotoShop、Flash<span class="ver-line">|</span>average<span class="ver-line">|</span>6 months</div>
-					<div class="professional-skill">CAD<span class="ver-line">|</span>expert<span class="ver-line">|</span>12 months</div>
-					<div class="professional-skill">Studio VS Load Testing<span class="ver-line">|</span>proficient<span class="ver-line">|</span>15 months</div>
-					<div class="professional-skill">Sharepoint、Office 365<span class="ver-line">|</span>proficient<span class="ver-line">|</span>35 months</div>
-				</dd>
-				<dt><h5>Interests &amp; Hobbies</h5></dt>
-				<dd>
-					<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-						Swimming、Jogging、Exercise、Game
-					</p>
+					<dd>
+						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
+							1.Focusing on iOS APP development, proficient in using OC and SwiftUI languages.<br>
+							2.Regularly use Google and Stack overflow to find solutions to problems encountered during the development process, or check official documents and solve them through experiments.<br>
+							3.Currently, I am also learning and understanding Springboot.<br>
+						</p>
+					</dd>
 				</dd>
 			</dl>
 			<input id="neturlparam" type="hidden" value="AppId=1&amp;Id=140742770&amp;Timestamp=1477363836&amp;Callback=&amp;signature=26422ED12C97BB8A03D888BD8F3C8256">
