update resume ce

--- a/Easer's Resume_CE.html
+++ b/Easer's Resume_CE.html
@@ -51,7 +51,7 @@
 						</ul>
 					</dd>
 				</div>
-				<dt><h5>职业技能</h5></dt>
+				<dt><h5>Skills</h5></dt>
 				<dd>
 					<div class="professional-skill">1. Pursue improving work efficiency while ensuring code quality, and be familiar with Git and GitFlow.</div>
 					<div class="professional-skill">2. Familiar with OC and SwiftUI, with solid basic knowledge and understanding of multithreading, memory, etc.</div>
