--- a/Easer's Resume_CC.html
+++ b/Easer's Resume_CC.html
@@ -63,13 +63,14 @@
 				<dt><h5>工作经历</h5></dt>
 				<dd>
 					<div class="work-experience">
-						<p>2021/12 -- 2023/09</p>
+						<p>2021/12 -- 2024/06</p>
 						<h6>高知特信息技术公司（Apple客户）<span class="ver-line">|</span> APP开发</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.MyBiz、Expert等APP（SwiftUI）。
+							1.MyBiz、Expert、AutoBoard、Sentionel等APP（SwiftUI）。
 						</p>
 						<p style="margin-left: 20pt;">
 							- MyBiz、Expert 是展示产品销售数据的 APP。<br>
+							- AutoBoard、Sentionel 是用Model识别图片内容的 APP。<br>
 							- 基于 SwiftUI 进行开发，并完成视频播放、离线缓存、图表展示、模型转换、图控件、menu控件等<br>
 						</p>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
