--- a/Easer's Resume_CE.html
+++ b/Easer's Resume_CE.html
@@ -61,13 +61,14 @@
 				<dt><h5>Work Experience</h5></dt>
 				<dd>
 					<div class="work-experience">
-						<p>2021/12 -- 2023/09</p>
+						<p>2021/12 -- 2024/06</p>
 						<h6>Cognizant Technology Solutions (Shanghai) Co Ltd (Apple Client)<span class="ver-line">|</span> iOS Developer</h6>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
-							1.MyBiz、Expert APPs(SwiftUI)。
+							1.MyBiz、Expert、AutoBoard、Sentionel APPs(SwiftUI)。
 						</p>
 						<p style="margin-left: 20pt;">
 							- MyBiz、Expert are APPs used to display product sales data.<br>
+							- AutoBoard、Sentionel are APPs used to recognise the content of image or pdf.<br>
 							- Develop based on SwiftUI and complete video play, offline caching, chart display, json model conversion, custom image view, custom menu component, etc<br>
 						</p>
 						<p style="width:574px; overflow:hidden;word-break: break-all; word-wrap:break-word;">
